deploy/00-namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: ghost-on-kubernetes
  labels:
    app: ghost-on-kubernetes
    app.kubernetes.io/name: ghost-on-kubernetes
    app.kubernetes.io/instance: ghost-on-kubernetes
    app.kubernetes.io/version: "5.88"
    app.kubernetes.io/component: namespace
    app.kubernetes.io/part-of: ghost-on-kubernetes
    app.kubernetes.io/managed-by: sredevopsorg
spec: {}
#---
# Optional: Limit the resources in the namespace
# 
# apiVersion: v1
# kind: ResourceQuota
# metadata:
#   name: ghost-on-kubernetes-quota
#   namespace: ghost-on-kubernetes
# spec:
#   hard:
#     limits.cpu: "2"
#     limits.memory: "4Gi"
#     requests.cpu: "0"
# #     requests.memory: "0"
# ---
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: default-deny
#   namespace: ghost-on-kubernetes
# spec:
#   podSelector: {}
#   policyTypes:
#   - Ingress
#   - Egress
