deploy/04-mysql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-ghostk3s
  namespace: ghostk3s
  labels:
    app: mysql-ghostk3s
spec:
  serviceName: mysql-ghostk3s
  replicas: 1
  selector:
    matchLabels:
      app: mysql-ghostk3s
  template:
    metadata:
      labels:
        app: mysql-ghostk3s
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
      - name: mysql-ghostk3s
        securityContext:
          #   capabilities:
          #     drop:
          #       - all
          #     add:
          #       - CHOWN
          #       - DAC_OVERRIDE
          #       - SETGID
          #       - SETUID
          #       - SETPCAP
          #       - NET_BIND_SERVICE
          #   readOnlyRootFilesystem: true
          #   runAsUser: 10001
          #   runAsGroup: 1001
          allowPrivilegeEscalation: false
        image: docker.io/mysql/mysql-server:8.0.32-1.2.11-server
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: 256Mi
            cpu: 500m
          limits:
            memory: 1024Mi
            cpu: 800m
        ports:
        - containerPort: 3306
          protocol: TCP
          name: mysqlgh

        volumeMounts:
        - name: mysql-ghostk3s-claim
          mountPath: /var/lib/mysql
          readOnly: false

  volumeClaimTemplates:
  - metadata:
      name: mysql-ghostk3s-claim
      namespace: ghostk3s
    spec:
      accessModes: ["ReadWriteMany"]
      storageClassName: "longhorn-rwx"
      resources:
        requests:
          storage: 2Gi
