deploy/05-ghost-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghostk3s
  namespace: ghostk3s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghostk3s
  template:
    metadata:
      namespace: ghostk3s
      labels:
        app: ghostk3s
    spec:
      volumes:
        - name: ghostk3s-static-ghost
          persistentVolumeClaim:
            claimName: ghostk3s-static-ghost
        - name: ghost-config-prod
          secret:
            secretName: ghost-config-prod
            defaultMode: 420
        - name: tmp
          emptyDir:
            sizeLimit: 128Mi

      containers:
        - name: elclaustro
          image: ghcr.io/sredevopsdev/ghost-on-kubernetes:main
          ports:
            - name: ghk3s
              containerPort: 2368
              protocol: TCP
        
          # readinessProbe:
          #   initialDelaySeconds: 60
          #   periodSeconds: 30
          #   timeoutSeconds: 3
          #   successThreshold: 1
          #   failureThreshold: 3
          #   httpGet:
          #     path: /ghost/api/v4/admin/site/
          #     port: ghk3s
          #     httpHeaders:
          #     - name: X-Forwarded-Proto
          #       value: https
          #     - name: Host
          #       value: tests.yourdomain.com
          livenessProbe:                        
            httpGet:
              path: /ghost/api/v4/admin/site/
              port: ghk3s
              httpHeaders:
              - name: X-Forwarded-Proto
                value: https
              - name: Host
                value: tests.yourdomain.com
            periodSeconds: 3600
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 2
          resources:
            limits:
              cpu: '2'
              memory: 2Gi
            requests:
              cpu: '0'
              memory: '0'
          volumeMounts:
            - name: ghostk3s-static-ghost
              mountPath: /var/lib/ghost/content
            - name: ghost-config-prod
              readOnly: true
              mountPath: /var/lib/ghost/config.production.json
              subPath: config.production.json
            - name: tmp
              mountPath: /tmp
              readOnly: false
          terminationMessagePath: /var/lib/ghost/content/logs/termination.log
          terminationMessagePolicy: File
          imagePullPolicy: Always
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      # Optional: Uncomment the following to specify node selectors
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #         - matchExpressions:
      #             - key: static
      #               operator: In
      #               values:
      #                 - "true"
      

      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 3
      
  revisionHistoryLimit: 3
  progressDeadlineSeconds: 600
