deploy/05-mysql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ghost-on-kubernetes-mysql
  namespace: ghost-on-kubernetes
  labels:
    app: ghost-on-kubernetes-mysql
    app.kubernetes.io/name: ghost-on-kubernetes-mysql
    app.kubernetes.io/instance: ghost-on-kubernetes
    app.kubernetes.io/version: '6.0.2'
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: ghost-on-kubernetes
    
spec:
  serviceName: ghost-on-kubernetes-mysql-service
  replicas: 1
  selector:
    matchLabels:
      app: ghost-on-kubernetes-mysql
  template:
    metadata:
      labels:
        app: ghost-on-kubernetes-mysql
    spec:
      containers:
      - name: ghost-on-kubernetes-mysql
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 65534

        image: docker.io/mysql:8.4
        imagePullPolicy: IfNotPresent # You can change this value according to your needs
        resources:
          requests:
            memory: 500Mi # You can change this value according to your needs
            cpu: 500m # You can change this value according to your needs
          limits:
            memory: 2Gi # You can change this value according to your needs
            cpu: 2000m # You can change this value according to your needs
        ports:
        - containerPort: 3306
          protocol: TCP
          name: mysqlgh
        volumeMounts:
        - name: ghost-on-kubernetes-mysql-volume
          mountPath: /var/lib/mysql
          subPath: mysql-empty-subdir
          readOnly: false

        - name: ghost-on-kubernetes-mysql-tmp
          mountPath: /tmp
          readOnly: false

        - name: ghost-on-kubernetes-mysql-socket
          mountPath: /var/run/mysqld
          readOnly: false

      automountServiceAccountToken: false

      # Optional: Uncomment the following to specify node selectors
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/worker
                    operator: In
                    values:
                      - 'true'

      securityContext:
        seccompProfile:
          type: RuntimeDefault

      volumes:
      - name: ghost-on-kubernetes-mysql-volume
        persistentVolumeClaim:
          claimName: ghost-on-kubernetes-mysql-pvc
      - name: ghost-on-kubernetes-mysql-tmp
        emptyDir:
          sizeLimit: 128Mi
      - name: ghost-on-kubernetes-mysql-socket
        emptyDir:
          sizeLimit: 128Mi
