deploy/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghost-on-kubernetes-ingress
  namespace: ghost-on-kubernetes
  labels:
    app: ghost-on-kubernetes
    app.kubernetes.io/name: ghost-on-kubernetes-ingress
    app.kubernetes.io/instance: ghost-on-kubernetes
    app.kubernetes.io/version: "5.88"
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: ghost-on-kubernetes
    app.kubernetes.io/managed-by: sredevopsorg
spec:
  ingressClassName: traefik # Or your ingress controller 
  tls:
  - hosts:
    - tests.yourdomain.com
    # Optional:
    # - www.tests.yourdomain.com
    secretName: yourdomain-com-tls
  rules:
  - host: tests.yourdomain.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: service-ghost-on-kubernetes
            port:
              name: ghk8s
  # Optional:
  # - host: www.tests.yourdomain.com
  #   http:
  #     paths:
  #     - path: /
  #       pathType: ImplementationSpecific
  #       backend:
  #         service:
  #           name: service-ghost-on-kubernetes
  #           port:
  #             name: ghk8s
